# redacta

./: .clawhubignore  .gitignore  CITATION.cff  LICENSE  README.md  SKILL.md  evaluations.json  redacta-portfolio.md  reference.md
.github/workflows/: mcpb-pack.yaml
benchmark/: RESULTS.md  benchmark.mjs  corpus.json  presidio_baseline.py  presidio_results.json  results.json
cli-package/: README.md  package-lock.json  package.json  tsconfig.json
cli-package/src/: cli.ts
figjam-plugin/: LISTING.md  README.md  build.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
figjam-plugin/src/: code.ts  ui.html
ios-app/: .gitignore  AppStore-Listing.md  AppStore-Privacy.md  AppStore-Screenshots.md  README.md  project.yml
ios-app/RedactaApp/: CameraPicker.swift  ContentView.swift  Info.plist  InfoView.swift  InlineReinstateView.swift  KeyboardHelpers.swift  OCRService.swift  PrivacyInfo.xcprivacy  RedactResultScreen.swift  RedactScreen.swift  RedactaApp.entitlements  RedactaApp.swift  (+11 more)
mcp-server/: .gitignore  LISTINGS.md  README.md  mcpb-build.mjs  package-lock.json  package.json  server.json  smithery.yaml  tsconfig.json
miro-app/: README.md  app-manifest.yaml  app.html  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
npm-package/: README.md  package-lock.json  package.json  tsconfig.json
python-package/: README.md  pyproject.toml
python-package/src/redacta/: __init__.py  structured.py
python-package/tests/: test_redacta.py
scripts/: reinstate.py  test_redact_structured.py  test_reinstate.py
(+44 files in other folders)
